--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400&display=swap" rel="stylesheet">
     
-    <title>Sorteador</title>
+    <title>MQuizTT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
